<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/counting_activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchingActivity">

    <ImageView
        android:id="@+id/countingBackgroundImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/tree_with_ground3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/includedBackButtonLayout"
        layout="@layout/reusablelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/feedbackImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/Result"
        android:visibility="invisible"
        android:elevation="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        android:scaleType="fitCenter"
        tools:srcCompat="@drawable/correct" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/problemSignContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/questionsigned"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="5dp"
        android:visibility="invisible"
        tools:visibility="visible" >

        <TextView
            android:id="@+id/textViewProblemSignText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_expanded_semibold"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_light"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.2"  />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/answerButtonsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        tools:visibility="visible">

    <!-- Button 1-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/answerButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp">

    <ImageView
        android:id="@+id/answerButtonImage1"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/answer_option_1"
        android:src="@drawable/answer_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/answerButtonText1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/fredoka_expanded_semibold"
        android:gravity="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@id/answerButtonImage1"
        app:layout_constraintEnd_toEndOf="@id/answerButtonImage1"
        app:layout_constraintStart_toStartOf="@id/answerButtonImage1"
        app:layout_constraintTop_toTopOf="@id/answerButtonImage1"
        tools:text="15" />
</androidx.constraintlayout.widget.ConstraintLayout>

    <!--Button 2-->
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/answerButton2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp">

<ImageView
    android:id="@+id/answerButtonImage2"
    android:contentDescription="@string/answer_option_2"
    android:layout_width="300dp"
    android:layout_height="48dp"
    android:scaleType="fitXY"
    android:src="@drawable/answer_button"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

<TextView
    android:id="@+id/answerButtonText2"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:fontFamily="@font/fredoka_expanded_semibold"
    android:gravity="center"
    android:textColor="@android:color/holo_orange_dark"
    android:textSize="28sp"
    app:layout_constraintBottom_toBottomOf="@id/answerButtonImage2"
    app:layout_constraintEnd_toEndOf="@id/answerButtonImage2"
    app:layout_constraintStart_toStartOf="@id/answerButtonImage2"
    app:layout_constraintTop_toTopOf="@id/answerButtonImage2"
    tools:text="99" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Button 3-->
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/answerButton3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:layout_marginTop="8dp">

<ImageView
    android:id="@+id/answerButtonImage3"
    android:contentDescription="@string/answer_option_3"
    android:layout_width="300dp"
    android:layout_height="48dp"
    android:scaleType="fitXY"
    android:src="@drawable/answer_button"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

<TextView
    android:id="@+id/answerButtonText3"
    android:layout_width="0dp"
    android:layout_height="0dp"
    tools:text="5"
    android:gravity="center"
    android:textColor="@android:color/holo_orange_dark"
    android:textSize="28sp"
    android:fontFamily="@font/fredoka_expanded_semibold"
    app:layout_constraintTop_toTopOf="@id/answerButtonImage3"
    app:layout_constraintBottom_toBottomOf="@id/answerButtonImage3"
    app:layout_constraintStart_toStartOf="@id/answerButtonImage3"
    app:layout_constraintEnd_toEndOf="@id/answerButtonImage3"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/verticalGuideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    </androidx.constraintlayout.widget.ConstraintLayout>
